<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
      android:layout_marginTop="@dimen/dp_20"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        style="@style/TextView">

    </TextView>
    <TextView
        android:layout_margin="@dimen/dp_20"
        android:id="@+id/email2"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        style="@style/TextView">

    </TextView>
    <TextView
        android:layout_height="wrap_content"


        android:text="@string/name1"
        style="@style/TextView">

    </TextView>
    <TextView
        android:layout_margin="@dimen/dp_20"
        android:layout_height="wrap_content"
        android:id="@+id/name2"

        android:text="@string/name"
        style="@style/TextView">

    </TextView>
    <TextView

        android:layout_height="wrap_content"

        android:text="@string/payment"
        style="@style/TextView">

    </TextView>
    <TextView
        android:layout_margin="@dimen/dp_20"
        android:layout_height="wrap_content"
        android:id="@+id/name3"

        android:text="@string/payment"
        style="@style/TextView">

    </TextView>
    <Button
        android:background="@color/Black"
        android:id="@+id/SignOut2"
        android:textAllCaps="false"
        android:textSize="@dimen/dp_30"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:layout_margin="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpUsage">

    </Button>
</LinearLayout>