<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:ignore="MissingClass">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView

            android:src="@drawable/recomandedfive"
            android:id="@+id/IvChild_two_image"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:contentDescription="@string/todo">

        </ImageView>



        <TextView
            android:layout_width="250dp"
            android:textSize="20sp"
            android:id="@+id/tvNameChildTwo"
            android:gravity="center_horizontal"
            android:text="@string/thom_browne"
            style="@style/TextView">

        </TextView>
        <TextView
            android:layout_width="250dp"
            android:id="@+id/tvDetailsChildTwo"
            android:textSize="20sp"
            android:textStyle="normal"
            android:gravity="center_horizontal"
            android:text="@string/fun_mix_tweed_jumper"
            style="@style/TextView">
        </TextView>

        <LinearLayout
            android:gravity="center"
            android:layout_width="250dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/dollar"
                style="@style/TextView">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tvPriceChildTwo"
                android:textSize="20sp"
                android:textStyle="normal"
                android:gravity="center_horizontal"
                android:text="@string/_1_19"
                style="@style/TextView">
            </TextView>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>