<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content">
    <TextView

        android:gravity="center"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/sale_2_000_items_now_at_70_off"
        android:textSize="20sp"

        android:textColor="@color/Red"
        style="@style/TextView"
        android:layout_height="wrap_content">
    </TextView>
<androidx.cardview.widget.CardView
    android:layout_marginTop="20dp"
    style="@style/CardView.">
    <LinearLayout
        android:orientation="vertical"
        style="@style/LinearLayout">


    <TextView

        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/let_s_get_personal"
      style="@style/TextView">
    </TextView>
    <TextView
        android:textStyle="normal"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/sign_in_for_a_tailored_shopping_experience"
        style="@style/TextView">
    </TextView>
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
           style="@style/LinearLayout">
            <Button
                android:id="@+id/mBtnCreateAccount"
                android:textAllCaps="false"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="@color/LightGrey"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:text="@string/create_account"
                android:layout_width="0dp"
               android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"

>

            </Button>
            <Button
                android:id="@+id/mBtnSignIn"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@color/black"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:text="@string/sign_in"
                android:layout_width="0dp"
               android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle">

            </Button>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
</LinearLayout>