<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayout"
    android:orientation="vertical"
    android:weightSum="10">
<androidx.cardview.widget.CardView
    android:layout_weight="2"
   style="@style/CardView."
    android:layout_height="0dp">
    <LinearLayout
        android:layout_gravity="end"
        style="@style/LinearLayout"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/textSignIn"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:text="@string/sign_in"
            style="@style/TextView">

        </TextView>

        <TextView
            android:id="@+id/textRegisterAsNew"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:text="@string/i_m_new_here"
            style="@style/TextView"
            android:layout_marginStart="30dp">

        </TextView>

    </LinearLayout>
</androidx.cardview.widget.CardView>


<LinearLayout
    android:id="@+id/SignInLayout"
    android:layout_width="match_parent"
    android:layout_weight="8"
    android:weightSum="8"
    android:orientation="vertical"
    android:layout_height="0dp">


    <EditText
        android:id="@+id/etEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:layout_marginBottom="0dp"
        android:hint="@string/email_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        >

    </EditText>
    <EditText
        android:id="@+id/etPass"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:layout_marginBottom="0dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
      >

    </EditText>
    <Button
        android:id="@+id/mBtnSignIn"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:layout_weight="1"
        android:layout_marginBottom="0dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </Button>
    <TextView
        android:id="@+id/tvForgotPass"
        android:textSize="20sp"
        android:layout_margin="25dp"
        android:gravity="center"
        android:layout_height="wrap_content"
       style="@style/TextView"
        android:text="@string/forgot_passwoed">

    </TextView>
    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="normal"
        style="@style/TextView"
        android:text="@string/or">

    </TextView>
    <RelativeLayout
        android:layout_marginBottom="0dp"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
      >



        <Button

            style="@style/button"
            android:textAllCaps="false"
            android:background="#3B5998"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/continue_with_facebook"
android:id="@+id/mBtnContinueWithFaceBook"
            android:drawableStart="@drawable/facebook">

        </Button>

    </RelativeLayout>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp"
       >

        <Button
            android:id="@+id/mBtnContinueWithGoogle"

            style="@style/button"
            android:background="@color/white"


            android:drawableLeft="@drawable/ic_flat_color_icons_google"
            android:text="@string/continue_with_gogle"

            android:drawableStart="@drawable/ic_flat_color_icons_google">

        </Button>

    </RelativeLayout>
    <TextView
        android:id="@+id/tvRegister"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/new_to_faretch_register"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/TextView">

    </TextView>
</LinearLayout>
    <LinearLayout
        android:id="@+id/SignUpLayout"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:weightSum="7"
        android:orientation="vertical"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/etName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:hint="@string/first_and_last_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >

        </EditText>

        <EditText
            android:id="@+id/etCEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:hint="@string/email_address"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >

        </EditText>
        <EditText
            android:id="@+id/etCPass"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >

        </EditText>
        <Button
            android:id="@+id/mBtnRegister"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_weight="1"
            android:layout_marginBottom="0dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        </Button>

        <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textStyle="normal"
            style="@style/TextView"
            android:text="@string/or">

        </TextView>
        <RelativeLayout
            android:layout_marginBottom="0dp"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >



            <Button

                style="@style/button"
                android:textAllCaps="false"
                android:background="#3B5998"
                android:drawableLeft="@drawable/facebook"
                android:text="@string/continue_with_facebook"
                android:id="@+id/mBtnContinueWithFaceBook1"
                android:drawableStart="@drawable/facebook">

            </Button>

        </RelativeLayout>
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp"
            >

            <Button
                android:id="@+id/mBtnContinueWithGoogle1"

                style="@style/button"
                android:background="@color/white"


                android:drawableLeft="@drawable/ic_flat_color_icons_google"
                android:text="@string/continue_with_gogle"

                android:drawableStart="@drawable/ic_flat_color_icons_google">

            </Button>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
